--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -25,11 +25,10 @@ html, body {
     height: 100%;
 }
 .chatInput{
-    min-height: 5%;
-    max-height:5%;
+    height: 5%;
 }
 .chat-input{
-    max-height: 100%;
+    height: 100%;
 }
 #chatBox, #chatSend{
     width: 100%;
@@ -38,6 +37,10 @@ html, body {
 }
 
 /* Utillities */
+
+#mainScreen{
+    min-height: 482.5px;
+}
 
 .center{
     text-align: center;
@@ -194,8 +197,8 @@ table{
 }
 
 .pre-scrollable{
-    min-height: 99%;
-    max-height: 99%;
+    min-height: 100%;
+    max-height: 100%;
 }
 .tab-content{
     margin: 10px 10px;
