FIxing the lobbyList screen page
Styling!!!!!!

--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -124,6 +124,7 @@ h2{
 .navbar-light{
   background-color: #7496B0;
     height: 5%;
+    padding-top: 0px;
 }
 
 .scroll{
@@ -208,6 +209,22 @@ table{
     background-color: #7496B0;
     font-size: large;
     cursor: pointer;
+}
+
+/* lobyList */
+#activeLobbies, #lobbylist{
+    height: 100%;
+}
+#activeLobbiesBar{
+    border-top: black solid 2px;
+    height: 5%;
+}
+#gameTabs{
+    height: 5%;
+}
+#mainLobbyList{
+    min-height: 83%;
+    max-height: 83%;
 }
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
