lobby list and lobby styling

--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -155,7 +155,6 @@ table{
 }
 .fill{
     height: 95%;
-    border-bottom: black solid 2px;
 }
 
 #main{
@@ -210,6 +209,13 @@ table{
     font-size: large;
     cursor: pointer;
 }
+#GlobalLobbyWindow, #GlobalPlayerWindow, #GlobalChatWindow, #LobbyChatWindow{
+    padding-left: 5px;
+}
+
+.mainItems{
+    height: 100%;
+}
 
 /* lobyList */
 #activeLobbies, #lobbylist{
@@ -226,6 +232,11 @@ table{
     min-height: 83%;
     max-height: 83%;
 }
+
+/* Lobby */
+
+
+
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
     body{
