Spectators working for UNO

--- a/public/css/games/style.css
+++ b/public/css/games/style.css
@@ -85,6 +85,11 @@ html, body {
 	color: black;
 	background-image: url("/Cards/Clubs.png");
 }
+.cards-in-hand>ul>li {
+	position: absolute;
+	width: 100%;
+	display: inline-block;
+}
 #card-deck {
 	position: absolute;
 	width: 60px;
