--- a/public/css/games/style.css
+++ b/public/css/games/style.css
@@ -107,6 +107,7 @@ html, body {
 	position: absolute;
 	left: calc(50% - 30px);
 	top: calc(50% + 10px);
+	z-index: 0;
 }
 @keyframes flip-card-rev {
 	from {
