--- a/public/css/games/style.css
+++ b/public/css/games/style.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: 'suits';
+  src:  url('/Cards/Font/icomoon.eot');
+  src:  url('/Cards/Font/icomoon.eot') format('embedded-opentype'),
+    url('/Cards/Font/icomoon.ttf') format('truetype'),
+    url('/Cards/Font/icomoon.woff') format('woff'),
+    url('/Cards/Font/icomoon.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+#instructions-wording {
+	font-family: 'suits';
+}
+
+
 html, body {
     width: 100%;
     height: 100%;
@@ -14,7 +29,11 @@ html, body {
 	top: 45%;
 }
 #game-table {
-	background-color: #4a8939;
+	background-color: black;
+	background-image: url("/PokerTable.png");
+	background-position: center;
+	background-size: cover;
+	
 	width: 100%;
 	height: 100%;
 	position: relative;
@@ -23,7 +42,8 @@ html, body {
 	position: absolute;
 	width: 20%;
 	height: 20%;
-	border: 1px solid black;
+	color: white;
+	/*border: 1px solid white;*/
 	text-align: center;
 	line-height: 100%;
 	
@@ -85,7 +105,11 @@ html, body {
 	color: black;
 	background-image: url("/Cards/Clubs.png");
 }
+.cards-in-hand {
+	font-family: 'suits';
+}
 .cards-in-hand>ul>li {
+	font-family: 'suits';
 	position: absolute;
 	width: 100%;
 	display: inline-block;
