--- a/public/css/games/style.css
+++ b/public/css/games/style.css
@@ -228,8 +228,13 @@ html, body {
 	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
 } 
 @media only screen and (max-width: 960px) {
+	#instructions>br {
+		height: 0px;
+		visibility: hidden;
+	}
 	#instructions-wording {
 		top: -30px !important;
+		margin-top: 0px;
 	}
 	.cards-in-hand {
 		font-size: 12px;
