--- a/public/css/games/style.css
+++ b/public/css/games/style.css
@@ -30,9 +30,10 @@ html, body {
 }
 #game-table {
 	background-color: black;
-	background-image: url("/PokerTable.png");
+	/*background-image: url("/PokerTable.png");*/
 	background-position: center;
 	background-size: cover;
+	background:transparent;
 	
 	width: 100%;
 	height: 100%;
